--- a/css/root.css
+++ b/css/root.css
@@ -90,7 +90,11 @@
   outline-offset: 2px;
   z-index: 1000;            
 }
-
+a:focus-visible,
+button:focus-visible {
+  outline: 2px solid #0a84ff;
+  outline-offset: 2px;
+}
 
 
 
